# StoryAI

./: .gitignore  pyproject.toml  render.yaml  requirements.txt  video_processor.py
backend/: db.py  models.py  render.yaml  requirements.txt  server.py  sessions.json
backend/client_transcripts/: client_session_20250519_104547.txt  client_session_20250519_105249.txt  client_session_20250519_140246.txt
backend/generated_pdfs/: Borek_Solutions_GROUP_x_EYOS_RETAILER_AUTOMATING_SUCCESS_STORY_CREATION_WITH_STORYBOOM_AI_187.docx  Borek_Solutions_Group_x_Aeos_StoryBoom_AI_Implementation_168.docx
backend/transcripts/: session_20250512_180239.txt  session_20250512_180902.txt  session_20250512_181528.txt  session_20250512_182236.txt  session_20250512_183442.txt  session_20250512_184208.txt  session_20250513_114215.txt  session_20250513_114524.txt  session_20250513_115334.txt  session_20250513_115557.txt  session_20250513_140242.txt  session_20250513_145348.txt  session_20250513_150441.txt  session_20250513_151313.txt  session_20250513_160622.txt  session_20250513_161149.txt  session_20250513_164821.txt  session_20250514_160611.txt  session_20250515_145456.txt  session_20250515_153606.txt  session_20250515_154506.txt  session_20250515_164244.txt  session_20250515_171635.txt  session_20250515_173140.txt  session_20250515_173900.txt  session_20250515_181546.txt  session_20250516_092843.txt  session_20250516_100640.txt  (+8 more)
frontend/: client.html  dashboard.html  feedback.html  feedback.js  index.html  login.html  script.js  script_client.js  signup.html  style.css  styles.css
