[tool.poetry]
name = "storyai"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "3.9.18"
Flask = "2.0.1"
requests = "2.26.0"
python-dotenv = "0.19.0"
fpdf = "1.7.2"
psycopg2-binary = "2.9.1"
sqlalchemy = "1.4.23"
flask-sqlalchemy = "2.5.1"
Flask-Migrate = "3.1.0"
Flask-Mail = "0.9.1"
Flask-WTF = "0.15.1"
flask-cors = "3.0.10"
langdetect = "1.0.9"
flask-jwt-extended = "4.3.1"
matplotlib = "3.4.3"
plotly = "5.3.1"
numpy = "1.21.2"
vaderSentiment = "3.3.2"
werkzeug = "2.0.1"
python-dateutil = "2.8.2"
pytz = "2021.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 